# BSDiff

app/: CMakeLists.txt  bsdiff.jks  build.gradle
app/src/androidTest/java/com/zhufk/bsdiff/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bspatch.c  native-lib.cpp
app/src/main/java/com/zhufk/bsdiff/: BsPatcher.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/zhufk/bsdiff/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
